<resources>
    <string name="telefoonnummer">"tel:911"</string>
    <string name="app_name">First aid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_moeder_class"></string>
    <string name="label_eigen_veiligheid">Own safety first</string>
    <string name="eigen_veiligheid">
<![CDATA[Own safety first!
    \n\n►Assess the accident.
    \n\n►Is it safe for yourself? If not "KEEP DISTANCE"
    \n\n►Press the arrow to continue]]>
    </string>
    <string name="label_andermans_veiligheid">Bystanders safety </string>
    <string name="andermans_veiligheid">
<![CDATA[►Warn bystanders..
    \n\n►Get there attention.
    \n\n ►Make them aware of the dangerous situation
    \n\n ►Try to avoid more casualties..]]>
    </string>
    <string name="label_markeren">Remove or mark danger</string>
    <string name="markeren">
<![CDATA[►Mark or eliminate acute hazards.
    \n\n►Remove or mark danger elements.
    \n\n►Fore example: Close a road next to an accident..
    \n\n►Ask bystanders for help!]]>
    </string>
    <string name="label_alarmeren">Call for help</string>
    <string name="alarmeren">
<![CDATA[Call or ask somebody to call the emergency service.
    \n\nTell...\n\n►What happened..
    \n►Where (address)..
    \n►how many victims you have seen..
    \n\n Press the image for...]]>
    </string>
    <string name="waar_ben_ik">find location</string>
    <string name="bel_112">call emergency service</string>
    <string name="label_noodtranport">Safe area</string>
    <string name="terug">back</string>
    <string name="hint_invoer">enter:</string>
    <string name="AantalAdemhalingenGeteltDialogTitel">Enter the number of breaths you counted between the bleeps.</string>
    <string name="knopBevestig">Confirm</string>
    <string name="knopRead_en_Beadem">Start CPR + Rescue Breathing loop</string>
    <string name="knopGeluidAan">Start CPR flow</string>
    <string name="knopGeluidUit">Stop CPR flow</string>
    <string name="knopMeetHartslag">Measure heartrate</string>
    <string name="tekstKnopRead_enBeadem">\nButton for 3 times a loop: of 30 cpr followed by 8 seconds time for 2 rescue breaths. </string>
    <string name="tekstGeluidAan">\nButton to start or stop cpr rhythm. </string>
    <string name="tekstnaarbreathing">\nButton to measure the breathing again.</string>
    <string name="positioneerReanimatie">
<![CDATA[►Read the  instructions below careful before doing anything\n\n
                                                  ►If possible, bare torso.\n
                                                  ►Get on your knees beside the victim.]]>
    </string>
    <string name="handenReanimatie">
<![CDATA[►Cross fingers together (see picture).\n
                                                  ►Place hands on the middle of the chest, above the diaphragm.
                                                  ]]>
    </string>
    <string name="uitvoerReanimatie">
<![CDATA[»Press the button: "Start CPR + Rescue Breathing loop".\n
                                                  ►Keep elbows straight, press victims chest down from your upper body.\n
                                                  ►Press the chest down 6 cm or 2,5 inches.\n
                                                  ►Press on the rhythm of the sound.]]>
    </string>
    <string name="uitleggeluidsbestandReanimatie">
<![CDATA[►After 30 times CPR, the sound stops for 8 seconds. In those seconds give victim 2 rescue breaths\n\n
                                                  ►Open the mouth, by lifting the chin.\n
                                                  ►Squeeze with your other hand his nose.\n
                                                  ►Mouth to mouth and exhale vigorously.\n
                                                  ►2 rescue  breaths, after 8 seconds the rhythm start again.
                                                  \n\nIf you find the loop too confusing. Press button: Start CPR flow.
                                                   Than you hear an non-stop cpr rhythm loop, with a rate of 100 CPR / minute]]>
    </string>
    <string name="tekstKnopRead_enBeadem_baby">\nButton for 4 times a loop: of 15 CPR followed by 8 seconds time for 2 rescue breaths. </string>
    <string name="positioneerReanimatie_baby">
<![CDATA[►Start with giving 5 rescue breaths.
                                                   Cover the mouth and nose with your mouth, blowing five rescue breaths.
                                                   These should each last about one second, and the chest should rise with each one.
                                                   Take a second to let the air come back out of the baby.\n\n]]></string>
    <string name="instructie_baby">►►From here, read the instructions below careful before doing anything</string>
    <string name="handenReanimatie_baby"><![CDATA[►If you are alone place your hands as on the photo above.\n\n
    ►When you have a helper, one person does the CPR, he places his thumbs as on the photo below.]]></string>
    <string name="uitvoerReanimatie_baby">
<![CDATA[►Press the button: "Start CPR + Rescue Breathing loop".
\n►Compress chest at least 1/3 the depth of the chest (about 4 cm or 1 ½ inches), 15 times just below the nipple line
\n►Press on the rhythm of the sound.]]>
    </string>
    <string name="uitleggeluidsbestandReanimatie_baby">
<![CDATA[►After 15 times CPR, the sound stops for 8 seconds. In those seconds give victim 2 rescue breaths
\n\n►Open the mouth, by lifting the chin.
\n►Cover the mouth and nose with your mouth, blowing 2 rescue breaths. These should each last about one second, and the chest should rise with each one.
Take a second to let the air come back out of the baby.
\n\n►2 rescue  breaths, after 8 seconds the rhythm start again.
\n\n►If you find the loop too confusing or if you have a helper. Press button: Start CPR flow. Than you hear an non-stop cpr rhythm loop, with a rate of 100 CPR / minute. Count out loud to 15.]]>
    </string>
    <string name="adem_bewust">
<![CDATA[Now the airway is clean, we observe the breathing frequency..
    \n\n   ►If the breathing is very fast, then it is likely that the patient is hyperventilating.
    \nHyperventilation happened a lot in panic situations.]]>
    </string>
    <string name="Knophyperventilatie">Hyperventilation</string>
    <string name="klaplong">
<![CDATA[►Posture stuffiness on one side of the body(chest), can indicate a collapsed lung.
    \n\nThe lung on the painful side is not working.
    \n\nPlace the patient in a sitting position.
    \n\n(e.g: Legs stretched on the floor, back against a wall.)]]>
    </string>
    <string name="long_raakt_bewustloos">
<![CDATA[If patients becomes unconscious, put him in the recovery position with the injured side on the ground.
    \nSo the healthy lung is not impede ]]>
    </string>
    <string name="stabiele_zijligging">Recovery position</string>
    <string name="uitwendige_bloeding">
<![CDATA[Scan the body for bleedings,
Onderzoek het lichaam op bloedingen, following four causes can be deadly.
  \n\n►►Arterial bleeding.
    \n►►Internal bleeding.
    \n►►Burns.
    \n►►Snakebite.

    \n\nArterial bleeding.
    \n►If you see a heavy pulsating bleeding. Press button: ►Heavy bleeding.
    \nSmall bleeding are not life threatening.]]>
    </string>
    <string name="interne_bloeding">
<![CDATA[Internal bleeding:
    \n\nTo check the patient on internal bleeding press hard on a fingernail, the nail will color white.
    \n►Look or the nail colors back to normal within 3 seconds. If patient has very cold hands press hard on the forehead.
    \n►Does the nail or forehead not coloring back within 3 seconds than it is likely that patient is in shock.
    \n►Blood does not return, because of heavy internal bleeding. Patient is in danger.
    \n Be aware.. Even patients who are awake and talking, can bleed inside to death.
    ]]>
    </string>
    <string name="interne_bloeding_actie">
<![CDATA[►Lay patient in shock posture, with legs up.
    \n►So that blood can flow from the legs to the chest and brains.
    \n►Keep checking breathing until the ambulance takes over.
    \nTell the medic: NO CAPILLARY REFILL]]>
    </string>
    <string name="knopBloed">Heavy bleeding</string>
    <string name="knopSlang">Snake bite</string>
    <string name="naarSlangen">Is the victim  bitten by a snake? Press snakebite</string>
    <string name="tvbrandwonden">If you see burns or the clothing of the victim is burned. ►Press button Burns</string>
    <string name="Exposure">
<![CDATA[Make sure the victim is not suffering form external elements like sun, wind, heat, cold, rain. Make his situation more comfortable.
    \n\nIf you ask the victims questions this acronym AMPLE can be useful. You can collect information for the medic.
    \n\n►Allergy:
    \n    »Are you allergic to something?
    \n\n►Medication:
    \n    »Are you currently taking any sort of medication?
    \n    »Are you under any medication?
    \n\n►Past Illness/History:
    \n    »Are you sick? or
    \n    »Have you been sick recently?
    \n\n►Last Meal
    \n    »What have you eaten today?
    \n    »Any alcohol, or drugs?
    \n\n►Events/Environment:
    \n    »What happened before the accident?
    \n    »What was the victim doing before he become unwell?
    \n\nThis information can be very helpful for the ambulance.
    \n\nRepeat ABCD until the ambulance arrive.
    ]]>
    </string>
    <string name="repeat_ABCD">Repeat ABCD</string>
    <string name="tekst_menu">for more information, or quick links press Menu.</string>
    <string name="menu">Menu</string>
    <string name="tvContact"> To translate this application in your language, or for improvements or changes inside the application. Please contact us by email</string>
    <string name="knopStuurEmail">Send e-mail</string>
    <string name="hintEmail">your message...</string>
    <string name="onderwerpEmail">subject</string>
    <string name="snake1">
<![CDATA[►Stay calm, get safely away from the snake.
    \n►The less the victim moves the bitten site, the less likely the venom will be spread through the body and cause damage.
    \n►Have the victim lie down with the affected limb lower than the heart.
    \n►Call the emergency service.
    \n►Remove any rings, bracelets, boots, or other restricting items from the bitten extremity. (It WILL swell.)]]>
    </string>
    <string name="snake2">►Mark the bite. Encircle only, so the bite can be found back after a swelling</string>
    <string name="snake3">
<![CDATA[►Apply a light constricting band about 5 cm above and below the bite, however never place the bands on either side of a joint (such as above and below the knee or elbow).
    \n►This band should be made up of wide, soft material, which could be a handkerchief or  a shredded t shirt.
    \n►The band should only be as tight as the band the nurse applies when taking a blood test.
    \n►The purpose of constricting bands is to restrict lymphatic flow, not blood, so they should not be too tight.
    \n►Check pulses below the bands and readjust the bands as necessary when they tighten due to swelling.]]>
    </string>
    <string name="snake4">
<![CDATA[►Treat for shock and preserve body heat.
   \n ►If the snake is dead take it with you to the hospital.
   \n ►If the victim has to walk out, sit calmly for 20-30 minutes to let the venom localize at the site, then proceed calmly to the nearest source of help.
    \n►Try to avoid unnecessary exertion which will stimulate circulation of the venom.]]>
    </string>
    <string name="label_brandwond">Burns</string>
</resources>