<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7CEEC"

    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContact"
            android:id="@+id/textView5"
            style="@style/TextView_sjabloom"/>

        <EditText
            android:id="@+id/etOnderwerp"
            android:hint="@string/onderwerpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />





        <EditText
            android:gravity="top"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>



        <Button
            android:id="@+id/btContactStuurEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/knopStuurEmail"
            style="@style/CustomStyleButton"
            android:onClick="knopEmail"/>

    </LinearLayout>


</ScrollView>