<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/tvOproepDialoog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AantalAdemhalingenGeteltDialogTitel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextDialogUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/hint_invoer">

        <requestFocus />

    </EditText>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/knopBevestig"
        android:id="@+id/button3"
        style="@style/CustomStyleButton"
        android:onClick="knop_Adem"/>


</LinearLayout>